# gc9d01-rs

./: Cargo.toml
.roo/: mcp.json  system-prompt-flow-architect  system-prompt-flow-ask  system-prompt-flow-code  system-prompt-flow-debug  system-prompt-flow-orchestrator
docs/: GC9D01N DataSheet V1.1.md
examples/stm32g4/: Cargo.toml  README.md
examples/stm32g4/src/: main.rs
src/: lib.rs
