[package]
name = "gc9d01"
version = "0.0.0"
authors = ["Ivan Li <ivanli2048@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["embedded", "embedded-hal-driver", "no-std", "gc9d01", "graphics"]
description = "GC9D01 async driver based on embedded-hal"
repository = "https://github.com/IvanLi-CN/gc9d01-rs"

[dependencies]
embedded-hal-async = { version = "1.0.0", optional = true }
embedded-hal = "1.0.0"
embedded-graphics-core = "0.4"
maybe-async-cfg = "0.2.5"
defmt = { version = "1.0.1", optional = true } # Added defmt as optional dependency

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["eh1"] } # Or the latest compatible version

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = 0

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[features]
async = ["dep:embedded-hal-async"]
defmt = ["dep:defmt"] # Added defmt feature
